--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ch">
 
 <head>
     <meta charset="UTF-8">
@@ -21,45 +21,45 @@
                     <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4">
                         <div class="card card-primary">
                             <div class="card-header">
-                                <h4>Login</h4>
+                                <h4>登录</h4>
                             </div>
                             <div class="card-body">
                                 <form method="POST" action="#" class="needs-validation" novalidate="">
                                     <div class="form-group">
-                                        <label for="email">Email</label>
-                                        <input id="email" type="email" class="form-control" name="email" tabindex="1" required autofocus>
+                                        <label for="email">用户名</label>
+                                        <input id="email" class="form-control" name="email" tabindex="1" required autofocus>
                                         <div class="invalid-feedback">
-                                            Please fill in your email
+                                            账号不能为空
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <div class="d-block">
-                                            <label for="password" class="control-label">Password</label>
+                                            <label for="password" class="control-label">密码</label>
                                             <div class="float-right">
                                                 <a href="#" class="text-small">
-                                                    Forgot Password?
+                                                    忘记密码？
                                                 </a>
                                             </div>
                                         </div>
                                         <input id="password" type="password" class="form-control" name="password" tabindex="2" required>
                                         <div class="invalid-feedback">
-                                            please fill in your password
+                                            密码不能为空
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <div class="custom-control custom-checkbox">
                                             <input type="checkbox" name="remember" class="custom-control-input" tabindex="3" id="remember-me">
-                                            <label class="custom-control-label" for="remember-me">Remember Me</label>
+                                            <label class="custom-control-label" for="remember-me">记住账号</label>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <button type="submit" class="btn btn-primary btn-lg btn-block" tabindex="4">
-                                            Login
+                                            登录
                                         </button>
                                     </div>
                                 </form>
                                 <div class="text-center mt-4 mb-3">
-                                    <div class="text-job text-muted">Login With Social</div>
+                                    <div class="text-job text-muted">其他方式登录</div>
                                 </div>
                                 <div class="row sm-gutters">
                                     <div class="col-6">
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                         <div class="mt-5 text-muted text-center">
-                            Don't have an account? <a href="#">Create One</a>
+                            沃日你还没有账号？ <a href="#">注册一个</a>
                         </div>
                     </div>
                 </div>
