--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -12,7 +12,7 @@
     <link rel='shortcut icon' type='image/x-icon' th:href="@{/img/favicon.ico}" />
     <style>
         #myFrame{
-            min-height: 1000px;
+            /*min-height: 1000px;*/
             border: 0;
         }
     </style>
